--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,8 +1,8 @@
-<b>Requirements : <b><br>
-numpy<br>
-scipy<br>
-matplotlib<br>
-dlib<br>
-imutils<br>
-opencv-python<br>
+Requirements : 
+numpy
+scipy
+matplotlib
+dlib
+imutils
+opencv-python
 pyautogui
